오류페이지 수정

--- a/src/main/resources/static/css/error.css
+++ b/src/main/resources/static/css/error.css
@@ -5,8 +5,13 @@
 }
 
 .error-wrap{
-    top: 300px;
+    top: 286px;
     position: absolute;
     text-align: center;
+}
+
+.error-header-wrap{
+    position: absolute;
+    top: 30px;
 }
 
